# layermesh

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml  pythontest.yml
doc/: Makefile  make.bat
doc/source/: classes.rst  conf.py  export.rst  importing.rst  index.rst  intro.rst  layermesh.geometry.rst  layermesh.mesh.rst  layermesh.quadtree.rst  layermesh.rst  modules.rst  optimize.rst  plot.rst  properties.rst  readwrite.rst  rectangular.rst  refine.rst  requirements.txt  searching.rst  start.rst  surface.rst  usage.rst
layermesh/: __init__.py  geometry.py  layermesh.py  mesh.py  quadtree.py
layermesh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_geometry.py  test_mesh.py
